# goodmemory-174

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  REPRODUCING.md  bunfig.all.toml  bunfig.legacy-fitted.toml  bunfig.toml  docker-compose.yml  glama.json  llms.txt  package-lock.json  package.json  server.json  tsconfig.json  tsconfig.package.json
.github/: PULL_REQUEST_TEMPLATE.md
.goodmemory/: codex.json
.well-known/: goodmemory.json
adr/: ADR-001-memory-taxonomy.txt  ADR-002-public-api.txt  ADR-003-runtime-context-controls.txt  ADR-004-maintenance-engine.txt  ADR-005-scenario-fitted-recall-boundary.txt  ADR-006-module-layering-and-shared-contracts.txt  ADR-007-python-client-and-docker-distribution.txt
benchmark-claims/: beam.json  implicitmembench.json  locomo.json  longmemeval.json  memoryagentbench.json
clients/python/: README.md  pyproject.toml
clients/python/goodmemory_client/: __init__.py  client.py
clients/python/tests/: live_smoke.py  test_client_unit.py
docs/: GoodMemory-15-Minute-App-Integration.md  GoodMemory-Behavioral-Adaptation-Closure-and-Outcome-Telemetry.md  GoodMemory-Benchmark-Optimization-Research-2026-07.md  GoodMemory-Claude-Code-Setup-Guide.md  GoodMemory-Codex-Handoff-Setup-Guide.md  GoodMemory-Current-Status-and-Evidence.md  GoodMemory-Cursor-Setup-Guide.md  GoodMemory-First-Principles-and-Reference-Architecture.md  GoodMemory-Gemini-CLI-Setup-Guide.md  GoodMemory-Implicit-Behavioral-Adaptation-Eval.md  GoodMemory-Inspector-and-Admin-API.md  (+36 more)
(+2474 files in other folders)
