[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "goodmemory-client"
version = "0.1.0"
description = "Official Python client for the GoodMemory HTTP bridge (phase-39.http-memory.v1)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "GoodMemory" }]
keywords = ["goodmemory", "memory", "agents", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/hjqcan/GoodMemory"
Documentation = "https://github.com/hjqcan/GoodMemory/blob/main/docs/GoodMemory-Python-HTTP-Integration-Bridge.md"

[tool.setuptools.packages.find]
include = ["goodmemory_client*"]

[tool.setuptools.package-data]
goodmemory_client = ["py.typed"]
